--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=your_bot_token_here
-ADMIN_ID=your_telegram_id
+BOT_TOKEN=7499630173:AAGzeUrar5Il4dTva5jw10bU7kfogoQAOI8
+ADMIN_ID=6190806369
 CPA_LINK=https://your-cpa-link.com
 WEBAPP_URL=https://your-app-name.onrender.com
