--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 BOT_TOKEN=7499630173:AAGzeUrar5Il4dTva5jw10bU7kfogoQAOI8
 ADMIN_ID=6190806369
-CPA_LINK=https://your-cpa-link.com
-WEBAPP_URL=https://your-app-name.onrender.com
+CPA_LINK=https://cpa-link.com
+WEBAPP_URL=https://telegram-adbot-for-telegram.onrender.com
